# GUV-CFD

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  restart_server.bat  start_server.bat
guvcfd/: app.py  app_settings.py  case_io.py  cellzones.py  cli.py  contaminant_source.py  decay_analysis.py  fan.py  fluence.py  help_content.py  initial_fields.py  mesh_gen.py  monitoring.py  monitoring_points.py  paraview_launch.py  report.py  result_figures.py  run_pipeline.py  scenario_runs.py  splice.py  steady_state_pipeline.py  system_info.py  ventilation_control.py  visualization.py  wsl_utils.py
guvcfd/assets/: style.css
guvcfd/templates/: results_table_template.docx
guvcfd/templates/case_template/constant/: transportProperties
guvcfd/templates/case_template/system/: controlDict  fvSchemes  fvSolution  volAverageDict
scripts/: open_paraview.ps1
tests/: test_app_progress.py  test_app_settings.py  test_case_io.py  test_contaminant_source.py  test_decay_analysis.py  test_decay_figure.py  test_initial_fields.py  test_live_volaverage_splice.py  test_mesh_gen.py  test_monitoring_display.py  test_monitoring_points.py  test_paraview_launch.py  test_relaxation_factors.py  test_report.py  test_report_filename.py  test_result_summaries.py  test_run_pipeline.py  test_run_safety.py  test_scenario_runs.py  test_settings_modal.py  test_settling_estimate.py  test_splice_start_from.py  test_steady_state_correction.py  test_steady_state_pipeline.py  test_system_info.py  test_visualization.py
